<resources>
    <string name="app_name">AutheticatorApp</string>
    <string name="authenticator_app">Authenticator App</string>
    <string name="string_authenticator_app">Authenticator App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_domain_com">email@domain.com</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_an_account">New Here? Create an account</string>
</resources>